# stock-alert-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  telegram-notify.yml
src/: __init__.py  config.py  scheduler.py  watchlist.py
src/indicators/: __init__.py  fear_greed.py
src/notifiers/: __init__.py  telegram.py
src/stock/: __init__.py  fetcher.py  ma.py  mdd.py
tests/: test_fear_greed.py  test_fetcher.py  test_ma.py  test_mdd.py  test_telegram.py
